k8s/80-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tethys-k8
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: tethys-k8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: tethys-persist
              mountPath: /var/lib/tethys_persist
              readOnly: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: tethys-persist
          persistentVolumeClaim:
            claimName: tethys-persist-pvc
